# context-management

./: .gitignore  CHANGELOG.md  LICENSE  NOTICE  README.md  alembic.ini  demo.py  pyproject.toml  test_data.json  test_runner.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
context_management/: __init__.py  cli.py  compaction.py  config.py  context.py  db.py  enums.py  exceptions.py  llm.py  memory.py  models.py  prompts.py  token_counter.py
tests/: conftest.py  test_cli.py  test_compaction.py  test_config.py  test_context_assembly.py  test_db.py  test_facade.py  test_llm.py  test_memory.py  test_memory_compaction.py  test_migration.py  test_models.py  test_prompts.py  test_token_counter.py
