[project]
name = "context-management"
version = "0.1.0"
description = "Platform-agnostic context management module for enterprise agentic systems"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg",
    "pydantic>=2.0",
    "tiktoken",
    "alembic",
    "anthropic>=0.84.0",
]

[project.optional-dependencies]
anthropic = ["anthropic"]
openai = ["openai"]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "testcontainers[postgres]",
    "mypy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
addopts = [
    "-v",
    "--cov=context_management",
    "--cov-report=term-missing",
    "--cov-fail-under=70",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
