[project]
name = "context-management"
version = "0.1.0"
description = "Platform-agnostic context management module for enterprise agentic systems"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [
    { name = "Kiran Shivaraju", email = "kiranshivaraju2020@gmail.com" },
]
keywords = ["llm", "memory", "context", "conversation", "agent", "anthropic", "openai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg",
    "pydantic>=2.0",
    "tiktoken",
    "alembic",
    "anthropic>=0.84.0",
]

[project.urls]
Homepage = "https://github.com/kiranshivaraju/context-management"
Repository = "https://github.com/kiranshivaraju/context-management"
Issues = "https://github.com/kiranshivaraju/context-management/issues"
Changelog = "https://github.com/kiranshivaraju/context-management/blob/main/CHANGELOG.md"

[project.optional-dependencies]
anthropic = ["anthropic"]
openai = ["openai"]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "testcontainers[postgres]",
    "mypy",
]

[project.scripts]
context-management = "context_management.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Ensure the alembic/ directory (env.py, versions/*.py, script.py.mako if added)
# ships inside the wheel so `context-management migrate` works post-install.
packages = ["context_management"]
include = [
    "context_management/alembic/**",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
addopts = [
    "-v",
    "--cov=context_management",
    "--cov-report=term-missing",
    "--cov-fail-under=70",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
